--- a/index.css
+++ b/index.css
@@ -822,13 +822,20 @@ img {
   margin-bottom: 4px;
 }
 
-.player-container {
-  width: 100%;
+.open-egg {
   position: absolute;
-  z-index: 100;
+  height: 100%;
+  width: 100%;
 }
 
-.egg-backdrop {
+#player-container {
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.open-egg-backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -839,6 +846,56 @@ img {
   border: none;
   pointer-events: auto;
   touch-action: auto;
-  align-items: center;
-  display: flex;
+}
+
+.progress {
+  --progress: 0%;
+  position: absolute;
+  height: 30px;
+  border: 1px solid #fff;
+  padding: 6px;
+  box-shadow: 0 0 10px #aaa;
+  z-index: 100;
+  left: 6rem;
+  right: 6rem;
+  margin-top: 4rem;
+  border-radius: 20px;
+  & span {
+    color: #002e72;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 20px;
+    text-align: left;
+    position: absolute;
+  }
+}
+
+.progress .bar {
+  width: var(--progress);
+  height: 100%;
+  /*background: linear-gradient(to right, #B87333 20%, #C0C0C0 40%, #FFD700 60%, #E5E4E2 80%, #B9F2FF 100%);*/
+  background: #fbad25;
+  box-shadow: 0 0 10px 0px orange;
+  animation:
+          shine 4s ease-in infinite,
+          end 1s ease-out 1;
+  transition: width 3s ease;
+  border-radius: 20px;
+}
+
+
+@property --progress {
+  syntax: "<length>";
+  initial-value: 0%;
+  inherits: true;
+}
+
+@keyframes shine {
+  0% { background-position: 0 0; }
+  100% { background-position: 0 50px; }
+}
+
+@keyframes end {
+  0%, 100% { box-shadow: 0 0 10px 0px orange; }
+  50% { box-shadow: 0 0 15px 5px orange; }
 }
